--- a/configs/config.ini
+++ b/configs/config.ini
@@ -2,3 +2,6 @@
 url = https://www.saucedemo.com/
 valid_username= standard_user
 valid_password = secret_sauce
+firstname = Ana
+lastname = Ciobanu
+zipcode = 45039
